[package]
name = "big-block-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bao-tree = "0.15.1"
clap = { version = "4.5.45", features = ["derive"] }
hex = "0.4.3"
human = "0.2.0"
iroh = "0.91.2"
iroh-blobs = { version = "0.93.0", git = "https://github.com/n0-computer/iroh-blobs" }
n0-future = "0.2.0"
rand = "0.8.5"
range-collections = "0.4.6"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
