[package]
name = "big-block-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bao-tree = "0.15.1"
iroh = "0.91.2"
iroh-blobs = { version = "0.93.0", git = "https://github.com/n0-computer/iroh-blobs" }
n0-future = "0.2.0"
rand = "0.8.5"
range-collections = "0.4.6"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.45", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
hex = "0.4.3"
testresult = "0.4.1"
postcard = "1.1.3"
bytes = "1.10.1"
send-future = "0.1.0"
